# gardener

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: main.c  main_mqtt.c  parameters.txt  sensor.c  sensor.h
esp32-switch/: platformio.ini
esp32-switch/src/: main.cpp  mqtt.txt  termostat.txt
iotivity-lite-patch/: 0001-install-cloud-access-rd-header.patch
path/iotivity-lite-patch/: 0001-install-cloud-access-rd-header.patch
src/: bc  config.c  config.h  iotivityDevice.c  iotivityDevice.h  log.c  log.h  main.c  serial.c  serial.h  subscriber.c  subscriber.h
